# Seleksi-2025-Tugas-1

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  autorun.bat  autorun.sh  docker-compose.yml  etl_log.txt  log.txt  pyproject.toml  readme_temp.md  requirements.txt  run.bat  run_all.py  run_all.sh  run_etl.bat  run_etl.sh  run_python.bat
AutoScheduler/: pipeline.py
Data Scraping/: log.txt  requirements.txt
Data Scraping/data/: CPU.json  CPU_Performance.json  Features.json  GPU.json  GPU_Performance.json  Laptop.json  Laptop_Configuration.json  Laptop_Detailed_Spec.json  Laptop_Image.json  Laptop_Score.json  Ports_Connectivity.json  ability.json  active_theatres.json  architects.json  art_styles.json  art_subjects.json  artifacts.json  artists.json  auditorium.json  authors.json  authors_data.json  awards.json  beautiful_faces_2023.json  boardgames.json  book_genres.json  book_languages.json  book_subjects.json  book_writer.json  books.json  books_price.json  bosses.json  branch.json  cameras.json  casts.json  categories.json  channels.json  character.json  characters.json  characters_data.json  cinema.json  (+97 more)
Data Scraping/src/: DataScraping_Animes.ipynb  DataScraping_VideoGames.ipynb  Scrape.py  _fruit_stock_scraper.py  _fruit_values_scraper.py  author_scraper  automated.py  categories.py  cd.py  character_scraper.py  collections.py  combine.py  company_scraper.py  data_cleaning.py  feedspot_scraper.py  main.py  (+37 more)
Data Storing/: requirements.txt
Data Warehouse/: README.md  TESTING_GUIDE.md  requirements.txt
data/: incompleteData.txt
(+294 files in other folders)
